sandbox/output
StockProfit.tests.cpp:191:1: error: redefinition of 'StockProfit_Two_day_prices_Test'
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1205:7: note: expanded from macro 'GTEST_TEST_'
class GTEST_TEST_CLASS_NAME_(test_case_name, test_name) : public parent_class {\
      ^
/usr/include/gtest/internal/gtest-internal.h:1201:3: note: expanded from macro 'GTEST_TEST_CLASS_NAME_'
  test_case_name##_##test_name##_Test
  ^
<scratch space>:87:1: note: expanded from here
StockProfit_Two_day_prices_Test
^
StockProfit.tests.cpp:114:1: note: previous definition is here
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1205:7: note: expanded from macro 'GTEST_TEST_'
class GTEST_TEST_CLASS_NAME_(test_case_name, test_name) : public parent_class {\
      ^
/usr/include/gtest/internal/gtest-internal.h:1201:3: note: expanded from macro 'GTEST_TEST_CLASS_NAME_'
  test_case_name##_##test_name##_Test
  ^
<scratch space>:55:1: note: expanded from here
StockProfit_Two_day_prices_Test
^
StockProfit.tests.cpp:191:1: error: redefinition of 'test_info_'
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1216:5: note: expanded from macro 'GTEST_TEST_'
  ::test_info_ =\
    ^
StockProfit.tests.cpp:114:1: note: previous definition is here
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1216:5: note: expanded from macro 'GTEST_TEST_'
  ::test_info_ =\
    ^
StockProfit.tests.cpp:191:1: error: redefinition of 'TestBody'
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1224:57: note: expanded from macro 'GTEST_TEST_'
void GTEST_TEST_CLASS_NAME_(test_case_name, test_name)::TestBody()
                                                        ^
StockProfit.tests.cpp:114:1: note: previous definition is here
TEST(StockProfit, Two_day_prices) {
^
/usr/include/gtest/gtest.h:2120:42: note: expanded from macro 'TEST'
# define TEST(test_case_name, test_name) GTEST_TEST(test_case_name, test_name)
                                         ^
/usr/include/gtest/gtest.h:2114:3: note: expanded from macro 'GTEST_TEST'
  GTEST_TEST_(test_case_name, test_name, \
  ^
/usr/include/gtest/internal/gtest-internal.h:1224:57: note: expanded from macro 'GTEST_TEST_'
void GTEST_TEST_CLASS_NAME_(test_case_name, test_name)::TestBody()
                                                        ^
3 errors generated.
make: *** [test] Error 1
